--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -5,3 +5,30 @@
     A simple primary alert—check it out!
 </div>
 <%= link_to "ログアウト", "#", class: "btn btn-danger", method: :get %>
+<%= link_to "ユーザー作成", new_user_path, class: "btn btn-primary" %>
+<%= link_to "ユーザー一覧", users_path, class: "btn btn-info" %>
+
+
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+  Launch demo modal
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
