--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
     <h1>ユーザー詳細</h1>
     <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="画像がありません">
+        <%= image_tag @user.avator.url, class:"img-fluid card-img-top", alt:"画像がありません" %>
         <div class="card-body">
             <h5 class="card-title"><%= @user.name %></h5>
             <p class="card-text"><%= @user.email %></p>
