--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,16 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
+      <% if notice %> <!-- flash[:notice]のnotice -->
+        <div class="alert alert-success text-center" role="alert">
+           <%= flash[:notice] %>
+        </div>
+      <% end %>
+      <% if flash[:destroy] %> <!-- flash[:notice]のnotice -->
+        <div class="alert alert-secondary text-center" role="alert">
+           <%= flash[:destroy] %>
+        </div>
+      <% end %>
     <%= yield %>
     <!-- bootstrap導入 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
