--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,6 +4,7 @@
         <thead>
             <tr>
                 <th scope="col">No</th>
+                <th scope="col">写真</th>
                 <th scope="col">名前</th>
                 <th scope="col">メールアドレス</th>
                 <th scope="col">編集</th>
@@ -15,6 +16,7 @@
             <% @users.each do |user| %>
                 <tr>
                     <th scope="row"><%= @i %></th>
+                    <td><%= image_tag user.avator.url, class:"img-fluid circle" %></td>
                     <td><%= user.name %></td>
                     <td><%= user.email %></td>
                     <td><%= link_to "info", user_path(user.id), class:"btn btn-info" %></td>
