--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -12,6 +12,11 @@
             <%= f.label :メールアドレス, for:"floatingInput" %>
         </div>
 
+        <div class="form-floationg mb-3">
+            <%= f.file_field :avator, id:"floatingInput", class:"form-control" %>
+            <%= f.label :avator, for:"floationInput" %>
+        </div>
+
         <div style="text-align:right;">
             <%= f.submit "登録", class:"btn btn-primary" %>
         </div>
